- Clipping fixes for the Theme Selector (in case it grows too large) - Reformatted the Readme

--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body.scott {
 .scott h6,
 .scott #tm_webpreview_header .headline {
 	color: #000;
+	font-style: normal;
 	font-weight: 500;
-	margin: 0 0 .5em;
+	margin: .5em 0;
 }
 
 .scott a {
@@ -137,14 +138,18 @@ body.scott {
 }
 
 .scott #theme_switcher {
+	-webkit-box-sizing: border-box;
 	color: #4a4a4a;
 	font-size: 10px;
 	font-weight: bold;
 	margin: 0;
 	opacity: 1;
-	padding: 2px;
+	height: 28px;
+	max-width: 200px;
+	padding: 2px 10px;
 	position: absolute;
 	right: 0;
+	text-align: right;
 	top: 0;
 	z-index: 100;
 }
@@ -166,6 +171,7 @@ body.scott {
 	border: 1px solid rgba(100,100,100,.5);
 	color: #444;
 	font-weight: bold;
+	max-width: 130px;
 	outline: none;
 	padding: 2px 5px 3px;
 }
@@ -196,16 +202,12 @@ body.scott {
 
 .scott #tm_webpreview_content {
 	background: none;
-	margin: 0;
-	padding: 10px;
+	margin: 10px;
+	padding: 0;
 }
 
 .scott #tm_webpreview_content :first-child {
 	margin-top: auto;
-}
-
-.scott #tm_webpreview_content > :first-child {
-	margin-top: 0;
 }
 
 .scott .pro_table {
